--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ sysinfo.txt
 
 # VS Code
 .vscode/
+ggj-2019-unity/ProjectSettings/UnityConnectSettings.asset
+ggj-2019-unity/ProjectSettings/GraphicsSettings.asset
+ggj-2019-unity/ProjectSettings/ProjectSettings.asset
+ggj-2019-unity/ProjectSettings/UnityConnectSettings.asset
